retrieveUnpackaged/objects/NOFA_Group__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert or Blended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_of__c</fullName>
        <label>Review of</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept papers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NOFA Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Review_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NOFA Group-{0000}</displayFormat>
        <label>NOFA Group ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NOFA Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>